# inside_cast_example

./: CMakeLists.txt  LICENSE  mainwindow.cpp  mainwindow.h
libs/testlib/: CMakeLists.txt  testlib.cpp  testlib.hpp  testlib_global.h
